# BitTorrent-Star

./: .gitignore  CMakeLists.txt  README.md  config.json  test.cpp
.cache/clangd/index/: color.hpp.AC57D36759D8C250.idx  cursor_control.hpp.2BC231D70CEC162F.idx  cursor_movement.hpp.5A3E8DDAA60D76CE.idx  display_width.hpp.32C41F5512518535.idx  downloader.cpp.4DA6C33B5ED436B9.idx  downloader.h.D814A3759D0EEA36.idx  dynamic_progress.hpp.ED6E40BE050CD215.idx  font_style.hpp.79583C1BADBD5CC2.idx  initer.h.B20156534AEE2B94.idx  main.cpp.379DC4C6E4D2C2ED.idx  progress_bar.hpp.956E09665AC8B7A7.idx  progress_type.hpp.B6EB777C44AA4A90.idx  setting.hpp.5CA02A6550D97931.idx  stream_helper.hpp.C404A5F90C6F8CDC.idx  termcolor.hpp.96CD34D37703555A.idx  terminal_size.hpp.D7264826A0D7512A.idx
.github/workflow/: c-cpp.yml
.github/workflows/: c-cpp.yml
include/: cli_options.h  configer.h  download_manager.h  downloader.h  torrent_download_manager.h  torrent_engine.h
src/: .clangd  download.cpp  download_manager.cpp  downloader.cpp  downloader.h  initer.h  main.cpp  test.cpp  torrent_download_manager.cpp  torrent_engine.cpp
utils/: Jsonhelper.hpp  Loghelper.hpp
